# fansland-backend

./: .env  .gitignore  Cargo.toml  Makefile  README.md  diesel.toml  docker-compose.yml
docs/: api.md  axum.md  blake3_demo.js  extract_address_from_token.js
examples/fansland_airdrop_demo/: Cargo.toml
examples/fansland_airdrop_demo/src/: main.rs
examples/fansland_blake3/: Cargo.toml
examples/fansland_blake3/src/: main.rs
examples/fansland_gen_qrcode/: 100_fix.txt  gen_qrcode.py  gen_redeem_code.py  push_qrcode_to_redis.py  redeem_code_vvip_3000.csv
examples/fansland_gen_qrcode/0426_ime_200_redeem_code/: Regular_1-Day_Ticket (4 May).csv  Regular_1-Day_Ticket (5 May).csv  bak_redeem_code_ime_500_1day_4_5.csv  bak_redeem_code_ime_500_1day_5_5.csv  bak_redeem_code_ime_500_2days_4-5_5.csv
examples/fansland_gen_qrcode/qrcodes_04_23/: qrcode_advance.csv  qrcode_early.csv  qrcode_regular_2_days.csv  qrcode_regular_4_5.csv  qrcode_regular_5_5.csv  qrcode_vvip_2_days.csv  redeem_code.csv  redeem_code_vvip_1000.csv
examples/fansland_jwk/: genjwt.js  genjwt_pro.js  genjwt_test.js  genjwt_uat.js  jwk.json  package.json
examples/fansland_jwk/Fansland_Particle_JWT_PrivateKeys_x509PEM/: pro.pem  test.pem  uat.pem
examples/fansland_jwk/jwks/: jwk_pro.json  jwk_uat.json
examples/fansland_jwks_go/: Makefile  go.mod  main.go
examples/fansland_jwt/: Cargo.toml
examples/fansland_loadtest/: Makefile  load_test.py
examples/fansland_test/src/: main.rs
examples/fansland_whitelists/: README.md  add_whitelist.py  whitelists.txt
fansland-discord/: README.md  background_task.py  discord_basic_bot.py  msg_listen.py
fansland_api/: Cargo.toml  Makefile
fansland_api/.sqlx/: query-02aa01e068c56889b1ce903bd65042393b31a8259418b0aafc76d2868fbc14f6.json  query-2c886d70cf16c4efc819b55cc6f6ea5b3762ee78b53e28bbbc7fb5e98f540a2b.json  query-376c0fb5b507a75b79c2d4dca5c8adc79b328ed3c9c67e4cbbb5c465bb0c5203.json  query-45bc3cdc0065872d880d1e1dd8325799c5f39e3b442ba205ccc365a457e2949c.json  query-59a87112750e083974f4ab141e11b89e89d4eeeaad8cb79cb98cd9c787aa76e1.json  query-6c3ee0ad4ab4743e54e51d0c14a1d7436177d4b7759996411d326e036fdb29ba.json  query-6fe6ee81ca55ceab0c2c034b8561b1398cf3306ba40beb9e883160f774d6cfd4.json  query-828f6b60d06c490ea6909ba3f20efe33c6eebdf5efba14f64e6abb9ade35de9b.json  query-b6bede18e6b7ded6ab74f65c210f47a7871c594fa9387ef04158ae85f1c4d518.json  query-b7c723498fc186358365858ad546b0342c9df9be21f862184ea6b91570ffa395.json  query-c861a3289dff76ce9f8382027dcb223e87354fc501824029a1517b1281fdae40.json  query-ca95f0b66f6091b5d9a0670edf6538df4feb910e1b4d2f9584b5f4729d14296b.json  query-d91b96f4de9ac8b1ad988da954573ca06738d605e96367e572e6608b78c9e26b.json  query-da617f7e46c8d507aa1ad0ccfd0239180828b3c273d3c968fb266ebc7a0f9834.json  query-da799246dd5a8e8ebbbd184941e4619345aaaca3d36bbd9106f456624e637813.json  query-e76321ffffb4d54663838e21ac32b3a6f701ab621a5b07bd0dabb610b4560811.json  query-ea5dbf6a932c6bfde06f32a06ad7dc7376d67fac4bc14881eb92029c6d28c17b.json
fansland_api/migrations/: 202404181758_v1.0.sql
fansland_api/migrations/2024-01-15-074704_create_tables/: down.sql  up.sql
fansland_api/src/: api.rs  extract.rs  handler.rs  jwt.rs  main.rs  model.rs  schema.rs
fansland_blake3/: Cargo.toml
fansland_blake3/src/: main.rs
fansland_common/: Cargo.toml
fansland_common/src/: error.rs  jwt.rs  lib.rs
fansland_common/src/utils/: datetime.rs  mod.rs  password_encoder.rs  randstr.rs  string.rs
fansland_discord/: .env  Makefile  discord_basic_bot.py  discord_bot.py  fansland_discord_bot.py
fansland_discord/examples/: discord_basic_bot.py
fansland_email/: Cargo.toml  README.md  template.html
fansland_email/src/: main.rs  qrcode2b64.rs  template.rs
fansland_email_py/: Makefile  fansland_email.py  main.py  requirement.txt  sendemail_embed_img.py  template.html  template.py  verify_email_template.html  web2_redeem_template.html
fansland_email_py/demos/: bak.py  sendemail.py
fansland_email_py/lib/: gen_qrcode.py  sendemail.py  template.py
fansland_nft_airdrop/: Cargo.toml  FanslandNFT.abi
fansland_nft_airdrop/src/: main.rs
fansland_nft_ticket/: Cargo.toml  FanslandNFT.abi  Makefile  README.md
fansland_nft_ticket/src/: main.rs
fansland_openapi/: Cargo.toml  README.md
fansland_openapi/example/: Makefile  load_test.py  sign.py
fansland_openapi/example/demo_java/: pom.xml
fansland_openapi/example/demo_java/src/main/java/org/example/: Main.java
fansland_openapi/src/: api.rs  handler.rs  main.rs
fansland_points_migrate/: .env  Cargo.toml  Makefile  README.md
fansland_points_migrate/.sqlx/: query-000ec8f5b340c6c6ec23275bb558631c95c4ea84bc745940eae82e299c17db44.json
fansland_points_migrate/migrations/: 20240307082221_v1.0.sql
fansland_points_migrate/src/: main.rs
fansland_points_rank/: Cargo.toml
fansland_points_rank/src/: main.rs
fansland_sign/: Cargo.toml
fansland_sign/src/: lib.rs  main.rs
fansland_telegram/: .env  Makefile  README.md  bot.py  chat_member_bot.py  check_member_by_api.py  fansland_telegram_bot.py
fansland_telegram/examples/: bot.py  check_member_by_api.py
migrations/2024-01-15-074704_create_tables/: down.sql  up.sql
migrations/2024-01-15-074704_create_users_table/: down.sql  up.sql
src/api/: main.rs
src/email/: main.rs
src/modles/: schema.rs
src/nft/: main.rs
src/ticket/: main.rs
