[package]
name = "fansland-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[[bin]]
name ="api"
path ="src/api/main.rs"

[[bin]]
name ="nft"
path ="src/nft/main.rs"

[[bin]]
name ="ticket"
path ="src/ticket/main.rs"

[[bin]]
name ="email"
path ="src/email/main.rs"

