[package]
name = "fansland-backend"
version = "0.1.0"
edition = "2021"


[[bin]]
name ="api"
path ="src/api/main.rs"

[[bin]]
name ="nft"
path ="src/nft/main.rs"

[[bin]]
name ="ticket"
path ="src/ticket/main.rs"

[[bin]]
name ="email"
path ="src/email/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }


