[package]
name = "fansland_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
[dependencies]
serde = { version="1", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version="1", features = ["full"] }
md5 = "0.7.0"
rustflake = "0.1.0"

diesel = { version = "2", features = ["chrono", "postgres"] }
diesel_migrations = "2"

# rbatis = { version = "3.0", default-features = false, features = ["mysql", "runtime-async-std-rustls"] }
# rbson = "2.0.3"
jsonwebtoken = "9.2.0"
getset = "0.1.2"
uuid = { version = "1.6.1", features = ["v8"] }
