[package]
name = "fansland_email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.3", features = ["behavior-version-latest"] }
aws-sdk-ses = "1.11.0"
aws-sdk-sesv2 = { version = "1.11.0", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"


[dependencies.clap]
version = "~4.4"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter"]