[package]
name = "fansland_openapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = { version = "0.7.4", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
# deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
# diesel = { version = "2", features = ["chrono", "postgres"] }
# diesel_migrations = "2"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ethers = "2.0.11"
ethsign = { version = "0.9.0", features = ["pure-rust"] }
hex = { version = "0.4.3", features = ["serde"] }


# redis = { version = "0.24.0", features = ["tokio-comp"] }
# redis_pool = "0.3"

fansland_common = { path = "../fansland_common" }
sha256 = "=1.5.0"
# jsonwebtoken = "9.2.0"
# uuid = { version = "1.6.1", features = ["v4"] }
# rand = "0.8.5"
# base64-url = "2.0.2"
# blake3 = "1.5.0"
# email_address = "0.2.4"
