[package]
name = "fansland_points_migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ethers = "2.0.11"
ethsign = { version = "0.9.0", features = ["pure-rust"] }
hex = { version = "0.4.3", features = ["serde"] }


redis = { version = "0.24.0", features = ["tokio-comp"] }
redis_pool = "0.3"
eyre = "0.6.11"
ctrlc = "3.4.2"
clap = { version = "4.4.18", features = ["derive"] }

anyhow = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "mysql" ] }
chrono = "0.4.35"
