[package]
name = "fansland_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest ={version = "0.11.23", features = ["blocking", "json"]}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
blake3 = "1.5.0"
hex = { version = "0.4.3", features = ["serde"] }
ethers = "2.0.11"
ethsign = { version = "0.9.0", features = ["pure-rust"] }
